--- a/Web/Pages/CCGMember/Details.cshtml
+++ b/Web/Pages/CCGMember/Details.cshtml
@@ -161,7 +161,7 @@
                                                 <div class="modal-body ">
                                                     <p>@(isEnglish ? c.RatingNameEng : c.RatingNameFre) @(isEnglish ? c.RatingDescEng : c.RatingDescFre)</p>
                                                     <p>@(isEnglish ? c.CompetencyLevelReqDescEng : c.CompetencyLevelReqDescFre)<p>
-                                                        <button class="popup-modal-dismiss" type="button">@Localizer["Close"]</button>
+                                                        <button class="btn btn-primary popup-modal-dismiss" type="button">@Localizer["Close"]</button>
                                                 </div>
                                             </section>
                                         </td>
