--- a/Web/Pages/Shared/_ThemeGcwu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwu.cshtml
@@ -35,27 +35,25 @@
     <meta name="dcterms.subject" title="scheme" content="French subject terms / Termes de sujet en français">
     <meta name="dcterms.language" title="ISO639-2" content="eng">
     <link rel="apple-touch-icon" sizes="57x57 72x72 114x114 144x144 150x150" class="wb-favicon" href="/themes-dist-8.0.1-gcweb/wet-boew/assets/favicon-mobile.png">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- Meta data-->
     <!--[if gte IE 9 | !IE ]><!-->
     <link href="~/themes-dist-8.0.1-gcweb/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/themes-dist-8.0.1-gcweb/GCWeb/css/theme.min.css">
     <!--<![endif]-->
     <!--[if lt IE 9]>
     <link href="~/themes-dist-8.0.1-gcweb/GCWeb/assets/favicon.ico" rel="shortcut icon">
+         <link rel="stylesheet" href="~/themes-dist-8.0.1-gcweb/GCWeb/css/ie8-theme.min.css" />
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="~/themes-dist-8.0.1-gcweb/wet-boew/js/ie8-wet-boew.min.js"></script>
     <![endif]-->
-    <!--[if lte IE 9]>
-        <![endif]-->
+
+    <noscript><link rel="stylesheet" href="/themes-dist-8.0.1-gcweb/wet-boew/css/noscript.min.css" /></noscript>
+    <script src="~/themes-dist-8.0.1-gcweb/wet-boew/js/i18n/en.min.js"></script>
+    <script src="~/themes-dist-8.0.1-gcweb/wet-boew/js/deps/jquery.magnific-popup.min.js"></script>
     <!-- Are you using the application templates? If so add the following CSS file -->
-    <link rel="stylesheet" href="~/themes-dist-8.0.1-gcweb/GCWeb/css/theme.min.css">
-    <link rel="stylesheet" href="~/themes-dist-8.0.1-gcweb/wet-boew/css/magnific-popup.css">
-    
+   
 
-    <script>
-        document.write(wet.builder.refTop({
-
-        }));
-    </script>
 </head>
 <body vocab="https://schema.org/" typeof="WebPage">
     <nav>
@@ -165,7 +163,7 @@
     <partial name="_ThemeGcwuFooter" />
     <!--[if gte IE 9 | !IE ]><!-->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
     <script src="~/themes-dist-8.0.1-gcweb/wet-boew/js/wet-boew.min.js"></script>
     <!--<![endif]-->
     <!--[if lt IE 9]>
