--- a/Web/Pages/Shared/_ThemePdf.cshtml
+++ b/Web/Pages/Shared/_ThemePdf.cshtml
@@ -5,7 +5,8 @@
 <!--<![endif]-->
 <html class="no-js" dir="ltr">
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta charset="UTF-8" />
     <title>
         @ViewData["Title"] - CCG CCT
     </title>
@@ -18,17 +19,21 @@
     <meta name="dcterms.modified" title="W3CDTF" content="Date modified (YYYY-MM-DD) / Date de modification (AAAA-MM-JJ)">
     <meta name="dcterms.subject" title="scheme" content="French subject terms / Termes de sujet en français">
     <meta name="dcterms.language" title="ISO639-2" content="eng"> <!-- Meta data-->
+    <!-- Meta data-->
     <!--[if gte IE 9 | !IE ]><!-->
     <link href="~/themes-dist-8.0.1-gcweb/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
     <link rel="stylesheet" href="~/themes-dist-8.0.1-gcweb/GCWeb/css/theme.min.css">
     <!--<![endif]-->
     <!--[if lt IE 9]>
-            <link href="~/themes-dist-8.0.1-gcweb/GCWeb/assets/favicon.ico" rel="shortcut icon" />
-            <link rel="stylesheet" href="~/themes-dist-8.0.1-gcweb/GCWeb/css/ie8-theme.min.css" />
-            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-            <script src="~/themes-dist-8.0.1-gcweb/wet-boew/js/ie8-wet-boew.min.js"></script>
-            <![endif]-->
-    <noscript><link rel="stylesheet" href="~/themes-dist-8.0.1-gcweb/wet-boew/css/noscript.min.css" /></noscript>
+    <link href="~/themes-dist-8.0.1-gcweb/GCWeb/assets/favicon.ico" rel="shortcut icon">
+         <link rel="stylesheet" href="~/themes-dist-8.0.1-gcweb/GCWeb/css/ie8-theme.min.css" />
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="~/themes-dist-8.0.1-gcweb/wet-boew/js/ie8-wet-boew.min.js"></script>
+    <![endif]-->
+
+    <noscript><link rel="stylesheet" href="/themes-dist-8.0.1-gcweb/wet-boew/css/noscript.min.css" /></noscript>
+    <script src="~/themes-dist-8.0.1-gcweb/wet-boew/js/i18n/en.min.js"></script>
+
 </head>
 <body vocab="http://schema.org/" typeof="WebPage">
     <header>
@@ -49,6 +54,7 @@
 
 
     <!--[if gte IE 9 | !IE ]><!-->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
     <script src="~/themes-dist-8.0.1-gcweb/wet-boew/js/wet-boew.min.js"></script>
     <!--<![endif]-->
