--- a/Web/Pages/Student/College/Seagoing/Index.cshtml
+++ b/Web/Pages/Student/College/Seagoing/Index.cshtml
@@ -29,20 +29,20 @@
             <figure>
                 <div class="img-container">
                     <a style="text-decoration:none" asp-page="Officer/Index">
+                        <figcaption><h4 class="text-center">@Localizer["Officer"]</h4></figcaption>
                         <img src="~/img/CCGMember/SO.jpg" alt="@Localizer["PhotoOfficer"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                 </div>
-                <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Officer/Index">@Localizer["Officer"]</a></h4></figcaption>
             </figure>
         </div>
         <div class="col-md-6 col-sm-6">
             <figure>
                 <div class="img-container">
                     <a style="text-decoration:none" asp-page="Crew/Index">
+                        <figcaption><h4 class="text-center">@Localizer["Crew"]</h4></figcaption>
                         <img src="~/img/CCGMember/SC.jpg" alt="@Localizer["PhotoCrew"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                 </div>
-                <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Crew/Index">@Localizer["Crew"]</a></h4></figcaption>
             </figure>
         </div>
     </section>
