--- a/Web/Pages/Student/College/Seagoing/Officer/Index.cshtml
+++ b/Web/Pages/Student/College/Seagoing/Officer/Index.cshtml
@@ -30,26 +30,26 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <figure>
-                        <a class="nav-link" asp-page="Deck">
+                        <a style="text-decoration:none" class="nav-link" asp-page="Deck">
+                            <figcaption><h4 class="text-center">@Localizer["Deck"]</h4></figcaption>
                             <img src="~/img/CCGMember/Officer-Nav.jpg" alt="@Localizer["PhotoDeck"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
-                        <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Deck">@Localizer["Deck"]</a></h4></figcaption>
                     </figure>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <figure>
-                        <a class="nav-link" asp-page="Engineering">
+                        <a style="text-decoration:none" class="nav-link" asp-page="Engineering">
+                            <figcaption><h4 class="text-center">@Localizer["Engineering"]</h4></figcaption>
                             <img src="~/img/Candidate/Officer Chief Engineer.jpg" alt="@Localizer["PhotoEngineer"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
-                        <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Engineering">@Localizer["Engineering"]</a></h4></figcaption>
                     </figure>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <figure>
-                        <a class="nav-link" asp-page="Logistics">
+                        <a style="text-decoration:none" class="nav-link" asp-page="Logistics">
+                            <figcaption><h4 class="text-center">@Localizer["Logistics"]</h4></figcaption>
                             <img src="~/img/Student/OfficerLogistics.jpg" alt="@Localizer["PhotoLogistics"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
-                        <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Logistics">@Localizer["Logistics"]</a></h4></figcaption>
                     </figure>
                 </div>
             </div>
