--- a/Web/Pages/Student/HighSchool/Index.cshtml
+++ b/Web/Pages/Student/HighSchool/Index.cshtml
@@ -29,18 +29,18 @@
         <div class="row">
             <div class="col-sm-6">
                 <figure>
-                    <a class="nav-link" asp-page="Shoreside/Index">
+                    <a style="text-decoration:none" class="nav-link" asp-page="Shoreside/Index">
+                        <figcaption><h4 class="text-center">@Localizer["Shoreside"]</h4></figcaption>
                         <img src="~/img/Candidate/shoreside.jpg" alt="@Localizer["PhotoShoreside"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
-                    <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Shoreside/Index">@Localizer["Shoreside"]</a></h4></figcaption>
                 </figure>
             </div>
             <div class="col-sm-6">
                 <figure>
-                    <a class="nav-link" asp-page="Seagoing/Index">
+                    <a style="text-decoration:none" class="nav-link" asp-page="Seagoing/Index">
+                        <figcaption><h4 class="text-center">@Localizer["Seagoing"]</h4></figcaption>
                         <img src="~/img/Candidate/Seagoing.jpg" alt="@Localizer["PhotoSeagoing"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
-                    <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Seagoing/Index">@Localizer["Seagoing"]</a></h4></figcaption>
                 </figure>
             </div>
         </div>
