--- a/Web/Pages/Student/HighSchool/Shoreside/Index.cshtml
+++ b/Web/Pages/Student/HighSchool/Shoreside/Index.cshtml
@@ -32,44 +32,45 @@
             <div class="col-lg-4 col-sm-6">
                 <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                     <div class="img-container">
-                        <a href="@Localizer["link"]" target="_blank">
+                        <a style="text-decoration:none" href="@Localizer["link"]" target="_blank">
+                            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["ccgcollege"]</h4></figcaption>
                             <img src="~/img/Student/CCGCollege.jpg" alt="@Localizer["PhotoCollege"]" class="img-responsive" />
                         </a>
                     </div>
-                    <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="@Localizer["link"]" target="_blank">@Localizer["ccgcollege"]</a></h4></figcaption>
                 </figure>
             </div>
 
             <div class="col-lg-4 col-sm-6">
                 <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                     <div class="img-container">
-                        <a class="nav-link" asp-page="Administrative">
+                        <a style="text-decoration:none" class="nav-link" asp-page="Administrative">
+                            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["admin"]</h4></figcaption>
                             <img src="~/img/CCGMember/Admin.jpg" alt="@Localizer["PhotoAdmin"]" class="img-responsive" />
                         </a>
                     </div>
-                    <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" asp-page="Administrative">@Localizer["admin"]</a></h4></figcaption>
                 </figure>
             </div>
 
             <div class="col-lg-4 col-sm-6">
                 <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                     <div class="img-container">
-                        <a class="nav-link" asp-page="Computer">
+                        <a style="text-decoration:none" class="nav-link" asp-page="Computer">
+                            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["computer"]</h4></figcaption>
                             <img src="~/img/CCGMember/CS.jpg" alt="@Localizer["PhotoComputer"]" class="img-responsive" />
                         </a>
                     </div>
-                    <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" asp-page="Computer">@Localizer["computer"]</a></h4></figcaption>
                 </figure>
             </div>
 
             <div class="col-lg-4 col-sm-6">
                 <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                     <div class="img-container">
-                        <a class="nav-link" asp-page="Trades">
+                        <a style="text-decoration:none" class="nav-link" asp-page="Trades">
+                            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["trades"]</h4></figcaption>
                             <img src="~/img/CCGMember/GL.jpg" alt="@Localizer["PhotoTrades"]" class="img-responsive" />
                         </a>
                     </div>
-                    <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" asp-page="Trades">@Localizer["trades"]</a></h4></figcaption>
+                   
                 </figure>
             </div>
 
