--- a/Web/Pages/Student/University/Shoreside/Index.cshtml
+++ b/Web/Pages/Student/University/Shoreside/Index.cshtml
@@ -30,71 +30,72 @@
         <div class="col-lg-4 col-sm-6">
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
-                    <a class="nav-link" href="@Localizer["link"]" target="_blank">
+                    <a style="text-decoration:none" class="nav-link" href="@Localizer["link"]" target="_blank">
+                        <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["ccgcollege"]</h4></figcaption>
                         <img src="~/img/Student/CCGCollege.jpg" alt="@Localizer["PhotoCollege"]" class="img-responsive" />
                     </a>
                 </div>
-                <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="@Localizer["link"]" target="_blank">@Localizer["ccgcollege"]</a></h4></figcaption>
             </figure>
         </div>
         <div class="col-lg-4 col-sm-6">
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
-                    <a class="nav-link" asp-page="Business">
+                    <a style="text-decoration:none" class="nav-link" asp-page="Business">
+                        <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["business"]</h4></figcaption>
                         <img src="~/img/Student/Business.jpg" alt="@Localizer["PhotoBusiness"]" class="img-responsive" />
                     </a>
                 </div>
-                <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" asp-page="Business">@Localizer["business"]</a></h4></figcaption>
             </figure>
         </div>
         <div class="col-lg-4 col-sm-6">
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
-                    <a class="nav-link" asp-page="ComputerScience">
+                    <a style="text-decoration:none" class="nav-link" asp-page="ComputerScience">
+                        <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["computer"]</h4></figcaption>
                         <img src="~/img/CCGMember/CS.jpg" alt="@Localizer["PhotoComputer"]" class="img-responsive" />
                     </a>
                 </div>
-                <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" asp-page="ComputerScience">@Localizer["computer"]</a></h4></figcaption>
             </figure>
         </div>
         <div class="col-lg-4 col-sm-6">
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
-                    <a class="nav-link" asp-page="Engineering">
+                    <a style="text-decoration:none" class="nav-link" asp-page="Engineering">
+                        <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["engineering"]</h4></figcaption>
                         <img src="~/img/Student/ENG.jpg" alt="@Localizer["PhotoEngineer"]" class="img-responsive" />
                     </a>
                 </div>
-                <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" asp-page="Engineering">@Localizer["engineering"]</a></h4></figcaption>
             </figure>
         </div>
         <div class="col-lg-4 col-sm-6">
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;line-height: 1.0">
                 <div class="img-container">
-                    <a class="nav-link" asp-page="GeneralArts">
+                    <a style="text-decoration:none" class="nav-link" asp-page="GeneralArts">
+                        <figcaption class="caption text-center"><h4 class="h6  mrgn-tp-0 mrgn-bttm-0">@Localizer["arts"]<br /><small>@Localizer["language"]</small></h4></figcaption>
                         <img src="~/img/Student/General Arts.jpg" alt="@Localizer["PhotoArts"]" class="img-responsive" />
                     </a>
                 </div>
-                <figcaption class="caption text-center"><h4 class="h6  mrgn-tp-0 mrgn-bttm-0"><a style="text-decoration:none" asp-page="GeneralArts">@Localizer["arts"]</a><br /><small>@Localizer["language"]</small></h4></figcaption>
             </figure>
         </div>
         <div class="col-lg-4 col-sm-6">
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
-                    <a class="nav-link" asp-page="Sciences">
+                    <a style="text-decoration:none" class="nav-link" asp-page="Sciences">
+                        <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["sciences"]</h4></figcaption>
                         <img src="~/img/Student/Nurse2.jpg" alt="@Localizer["PhotoSciences"]" class="img-responsive" />
                     </a>
                 </div>
-                <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" asp-page="Sciences">@Localizer["sciences"]</a></h4></figcaption>
             </figure>
         </div>
         <div class="col-lg-4 col-sm-6">
             <figure class="thumbnail eqht-trgt" style="vertical-align: top; line-height:1.0">
                 <div class="img-container">
-                    <a class="nav-link" asp-page="SocialScience">
+                    <a style="text-decoration:none" class="nav-link" asp-page="SocialScience">
+                        <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-0 mrgn-bttm-0">@Localizer["social"]<br /><small>@Localizer["economics"]</small></h4></figcaption>
                         <img src="~/img/Student/Social Science.jpg" alt="@Localizer["PhotoSocial"]" class="img-responsive" />
                     </a>
                 </div>
-                <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-0 mrgn-bttm-0"><a style="text-decoration:none" asp-page="SocialScience">@Localizer["social"]</a><br /><small>@Localizer["economics"]</small></h4></figcaption>
+                
             </figure>
         </div>
     </section>
