--- a/Web/Pages/Student/HighSchool/Seagoing/Index.cshtml
+++ b/Web/Pages/Student/HighSchool/Seagoing/Index.cshtml
@@ -31,44 +31,44 @@
         <div class="col-lg-4 col-sm-6">
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
-                    <a href="@Localizer["link"]" target="_blank">
+                    <a style="text-decoration:none" href="@Localizer["link"]" target="_blank">
+                        <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["ccgcollege"]</h4></figcaption>
                         <img src="~/img/Student/CCGCollege.jpg" alt="@Localizer["PhotoCollege"]" class="img-responsive" />
                     </a>
                 </div>
-                <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="@Localizer["link"]" target="_blank">@Localizer["ccgcollege"]</a></h4></figcaption>
             </figure>
         </div>
 
         <div class="col-lg-4 col-sm-6">
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
-                    <a class="nav-link" asp-page="SeagoingLogistics">
+                    <a style="text-decoration:none" class="nav-link" asp-page="SeagoingLogistics">
+                        <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["logistics"]</h4></figcaption>
                         <img src="~/img/Student/HS-Cook.jpg" alt="@Localizer["logisticsphoto"]" class="img-responsive" />
                     </a>
                 </div>
-                <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" asp-page="SeagoingLogistics">@Localizer["logistics"]</a></h4></figcaption>
             </figure>
         </div>
 
         <div class="col-lg-4 col-sm-6">
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
-                    <a class="nav-link" asp-page="SeagoingDeck">
+                    <a style="text-decoration:none" class="nav-link" asp-page="SeagoingDeck">
+                        <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["deck"]</h4></figcaption>
                         <img src="~/img/CCGMember/SC.jpg" alt="@Localizer["deckphoto"]" class="img-responsive" />
                     </a>
                 </div>
-                <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" asp-page="SeagoingDeck">@Localizer["deck"]</a></h4></figcaption>
             </figure>
         </div>
 
         <div class="col-lg-4 col-sm-6">
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
-                    <a class="nav-link" asp-page="SeagoingEngineer">
+                    <a style="text-decoration:none" class="nav-link" asp-page="SeagoingEngineer">
+                        <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["engineer"]</h4></figcaption>
                         <img src="~/img/Student/Marine Engineer - College CCT.jpg" alt="@Localizer["engineeringphoto"]" class="img-responsive" />
                     </a>
                 </div>
-                <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" asp-page="SeagoingEngineer">@Localizer["engineer"]</a></h4></figcaption>
             </figure>
         </div>
     </section>
