--- a/Web/Pages/Student/Index.cshtml
+++ b/Web/Pages/Student/Index.cshtml
@@ -27,26 +27,26 @@
 
         <div class="col-sm-4">
             <figure>
-                <a class="nav-link" asp-page="HighSchool/Index">
+                <a style="text-decoration:none" class="nav-link" asp-page="HighSchool/Index">
+                    <figcaption><h4 class="text-center">@Localizer["HighSchool"]</h4></figcaption>
                     <img src="~/img/Student/Highschool.jpg" alt="@Localizer["PhotoHS"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                 </a>
-                <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="HighSchool/Index">@Localizer["HighSchool"]</a></h4></figcaption>
             </figure>
         </div>
         <div class="col-sm-4">
             <figure>
-                <a class="nav-link" asp-page="College/Index">
+                <a style="text-decoration:none" class="nav-link" asp-page="College/Index">
+                    <figcaption><h4 class="text-center">@Localizer["TechCollege"]</h4></figcaption>
                     <img src="~/img/Student/TechCollege.jpg" alt="@Localizer["PhotoTC"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                 </a>
-                <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="College/Index">@Localizer["TechCollege"]</a></h4></figcaption>
             </figure>
         </div>
         <div class="col-sm-4">
             <figure>
-                <a class="nav-link" asp-page="University/Index">
+                <a style="text-decoration:none" class="nav-link" asp-page="University/Index">
+                    <figcaption><h4 class="text-center">@Localizer["University"]</h4></figcaption>
                     <img src="~/img/Student/University.jpg" alt="@Localizer["PhotoU"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                 </a>
-                <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="University/Index">@Localizer["University"]</a></h4></figcaption>
             </figure>
         </div>
     </section>
