--- a/Web/Pages/Shared/_ThemeGcwuFooter.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwuFooter.cshtml
@@ -10,7 +10,7 @@
             <nav class="container wb-navcurr">
                 <h2 class="wb-inv">About government</h2>
                 <ul class="list-unstyled colcount-sm-2 colcount-md-3">
-                    <li><a href="https://www.canada.ca/en/contact.html">Contact us</a></li>
+                    <li><a href="/en/Contact">Contact us</a></li>
                     <li><a href="https://www.canada.ca/en/government/dept.html">Departments and agencies</a></li>
                     <li><a href="https://www.canada.ca/en/government/publicservice.html">Public service and military</a></li>
                     <li><a href="https://www.canada.ca/en/news.html">News</a></li>
