Fixed issue with menu and competency row

--- a/Web/Pages/Shared/_ThemeGcwu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwu.cshtml
@@ -39,7 +39,7 @@
 
     <!--[if gte IE 9 | !IE ]><!-->
     <link href="~/themes-dist-8.0.1-gcweb/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-    <link rel="stylesheet" href="~/themes-dist-8.0.1-gcweb/GCWeb/css/theme.min.css">
+    <link rel="stylesheet" href="~/themes-dist-8.0.1-gcweb/wet-boew/css/theme.min.css">
     <!--<![endif]-->
     <!--[if lt IE 9]>
     <link href="~/themes-dist-8.0.1-gcweb/GCWeb/assets/favicon.ico" rel="shortcut icon">
